--- a/style.css
+++ b/style.css
@@ -1,3 +1,15 @@
 body {
-    background-color: red;
+    background-color: pink;
+}
+
+h1 {
+    font-size: 20px;
+}
+
+h2 {
+    color: red;
+}
+
+p {
+    margin-left: 50px;
 }
