--- a/27/02/style.css
+++ b/27/02/style.css
@@ -1,15 +1,19 @@
+/* add cor ao fundo da pagina */
 body {
     background-color: pink;
 }
 
+/* tamanho da fonte no h1 */
 h1 {
     font-size: 20px;
 }
 
+/* cor vermelho no texto no h2 */
 h2 {
     color: red;
 }
 
+/* margem no paragrafo */
 p {
     margin-left: 50px;
 }
